[project]
name = "ranime"
version = "0.1.0"
description = "Find random anime from https://randomanime.org"
readme = "README.md"
authors = [
    { name = "eeriemyxi", email = "myxi@duck.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "term-image>=0.7.2",
]

[project.scripts]
ranime = "ranime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
